# practice

./: .env.example  README.md  main.py  pyproject.toml  template_proj.ipynb  test.ipynb  test.py  web.py
migration/: env.py
migration/versions/: 03fddce219f1_added_userbalance.py  4ba5461132d1_create.py
models/: user.py  userbalance.py
schemas/: user.py
settings/: config.py  database.py
ui/: gui.ui  login_popup.ui  operations.ui  reg_popup.ui  res-rc.qrc  res_rc.py  ui_login_popup.py  ui_main.py  ui_reg_popup.py
